Bugfix: Kimchi: Better to list storage pool paths
Fix the defect that kimchi could not show the storage path properly when
it's too long.

(cherry picked from commit 0c41e5063984e50467f8c9abe67429df27efdab4)

Conflicts:
	ui/css/theme-default/storage.css

--- a/ui/css/theme-default/storage.css
+++ b/ui/css/theme-default/storage.css
@@ -1,7 +1,7 @@
 /*
  * Project Kimchi
  *
- * Copyright IBM, Corp. 2013
+ * Copyright IBM, Corp. 2013-2015
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -46,7 +46,7 @@
 
 .storage-text {
     font-size: 12px;
-    height: 18px;
+    min-height: 18px;
     padding: 10px;
     color: #999999;
     font-weight: bold;
